# vector-victor

./: CHANGELOG.md  Cargo.toml  LICENSE MIT.md  README.md
.github/workflows/: cargo-test-publish.yaml
docs/: mathjax.html
legacy/: math.rs  mod.rs  ops.rs  swizzle.rs
legacy/tests/: decompose.rs  swizzle.rs
legacy/tests/common/: mod.rs
src/: Container2D.rs  Index2D.rs  abs.rs  array2d.rs  containers.rs  decompose.rs  identities.rs  index.rs  lib.rs  mask.rs  math.rs  matrix.rs  matrix_traits.rs  ops.rs  solve.rs  splat.rs  swizzle.rs  util.rs
src/containers/: index.rs  iter.rs
src/legacy/: decompose.rs  mod.rs  util.rs
src/macros/: ops.rs
src/matrix/: mod.rs  ops.rs
tests/: decompose.rs  decomposition.rs  ops.rs  solve.rs  swizzle.rs
tests/common/: mod.rs
