[package]
name = "vector-victor"
license = "MPL-2.0"
description = "Yet another linear algebra crate"
version = "0.1.1"
edition = "2021"
keywords = ["matrix", "vector", "linear-algebra"]
categories = ["graphics", "mathematics"]
repository = "https://github.com/drewcassidy/vector-victor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_parameterize = "0.2.0"
itertools = "0.10.5"
num-traits = "0.2.15"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "vector-victor/docs/mathjax.html",
]
