[package]
name = "vector-victor"
license = "MPL-2.0"
description = "Yet another linear algebra crate"
version = "0.1.2"
edition = "2021"
keywords = ["matrix", "vector", "linear-algebra"]
categories = ["graphics", "mathematics"]
repository = "https://github.com/drewcassidy/vector-victor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
num-traits = "0.2.15"

[dev-dependencies]
generic_parameterize = "0.3.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/mathjax.html",
]
